--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -51,19 +52,21 @@
                 android:id="@+id/etxtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="150dp"
+                android:layout_marginTop="170dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
+                android:background="@color/black"
                 android:textSize="30dp" />
             <EditText
                 android:id="@+id/etxtContact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
+                android:background="@color/black"
                 android:textSize="30dp" />
         </LinearLayout>
     </LinearLayout>
