--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,21 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_weight="1.5"
+       android:gravity="center">
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="phonebook"
+           android:textAllCaps="true"
+           android:textSize="40dp"
+           android:gravity="center"
+           android:textColor="@color/black"/>
+   </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +43,7 @@
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
                 android:text="Name"
-                android:textColor="@color/black"
+                android:textColor="#252020"
                 android:textSize="30dp" />
             <TextView
                 android:layout_width="match_parent"
@@ -56,7 +71,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
-                android:background="@color/black"
+                android:background="#C1B5B5"
                 android:textSize="30dp" />
             <EditText
                 android:id="@+id/etxtContact"
@@ -66,7 +81,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
-                android:background="@color/black"
+                android:background="#C1B5B5"
                 android:textSize="30dp" />
         </LinearLayout>
     </LinearLayout>
